# mlopsdbttest

./: Dockerfile  api.py  model.pkl  pyproject.toml  train.py  train_mlflow.py
.github/workflows/: ci.yml
mlruns/0/: meta.yaml
mlruns/307375582611765897/: meta.yaml
mlruns/307375582611765897/76d6ae6f0874480d8912399ecd25e4ac/: meta.yaml
mlruns/307375582611765897/76d6ae6f0874480d8912399ecd25e4ac/metrics/: accuracy
mlruns/307375582611765897/76d6ae6f0874480d8912399ecd25e4ac/tags/: mlflow.runName
mlruns/307375582611765897/9c1538bd123941949de504b456d47a48/: meta.yaml
mlruns/307375582611765897/9c1538bd123941949de504b456d47a48/metrics/: accuracy
mlruns/307375582611765897/9c1538bd123941949de504b456d47a48/tags/: mlflow.runName  mlflow.source.name
mlruns/307375582611765897/d19de6cd4d3c488f8486637fe7643c3e/: meta.yaml
mlruns/307375582611765897/d19de6cd4d3c488f8486637fe7643c3e/metrics/: accuracy
mlruns/307375582611765897/d19de6cd4d3c488f8486637fe7643c3e/tags/: mlflow.runName
mlruns/307375582611765897/models/m-650fd2123d674fbc9a2126013c3ca038/: meta.yaml
mlruns/307375582611765897/models/m-e603c4143a6340ce9ad5b8a1194b0384/: meta.yaml
mlruns/307375582611765897/models/m-fd9b01c800b947fca6d61621d462306c/: meta.yaml
mlruns/307375582611765897/tags/: mlflow.sharedViewState.227dbb36c466c614891eba1b8439355704a3828dbc092ea6db7f8a9c07792cc9
mlruns/models/Sarap_Kalitesi_Modeli/: meta.yaml
mlruns/models/Sarap_Kalitesi_Modeli/version-1/: meta.yaml
mlruns/models/sample 1/: meta.yaml
(+12 files in other folders)
