[project]
name = "mlopsdbttest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "dbt-core>=1.10.22",
    "fastapi>=0.128.8",
    "mlflow>=3.1.4",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.39.0",
]
